# rangifer_diary

./: .aspell.en.pws  .gitignore  .markdownlint.json  README.md  footnotes.md
000/: README.md
001/: README.md
002/: README.md
003/: README.md
004/: README.md
005/: README.md
006/: README.md
007/: README.md
008/: README.md
009/: README.md
010/: README.md
011/: README.md
012/: README.md
013/: README.md
014/: README.md
015/: README.md
016/: README.md
017/: README.md
018/: README.md
019/: README.md
020/: README.md
021/: README.md
022/: README.md
023/: README.md
024/: README.md
025/: README.md
026/: README.md
027/: README.md
028/: README.md
029/: README.md
030/: README.md
031/: README.md
032/: README.md
033/: README.md
034/: README.md
035/: README.md
036/: README.md
037/: README.md
038/: README.md
039/: README.md
040/: README.md
041/: README.md
042/: README.md
043/: README.md
044/: README.md
045/: README.md
046/: README.md
047/: README.md
048/: README.md
049/: README.md
050/: README.md
051/: README.md
052/: README.md
053/: README.md
054/: README.md
055/: README.md
056/: README.md
057/: README.md
058/: README.md
059/: README.md
060/: README.md
061/: README.md  fubini.py
062/: Cargo.toml  README.md  fubini.py
062/benches/: fubini_benchmark.rs
062/src/: lib.rs
063/: README.md
064/: README.md
065/: README.md
066/: README.md
067/: README.md
068/: Cargo.toml  README.md  odd_job_universe.ron
068/src/: data.rs  main.rs  write.rs
069/: README.md
070/: README.md
071/: Cargo.toml  README.md  odd_job_hypergraph-large.ron  odd_job_hypergraph-small.ron  odd_job_hypergraph.ron
071/src/: am.rs  color.rs  de.rs  main.rs  order.rs  util.rs
072/: README.md  weak_ordering.ron
073/: README.md
074/: README.md
075/: README.md  requirements.txt  sample.py  sample.tree  sample1.py  sample_funsies.py  sample_weighted.py  sample_weighted.tree
076/: 00-00.tree  README.md  constraint_check.py  render.py  requirements.txt
077/: 00-01.tree  README.md  example_dag.gv  render.py  requirements.txt
078/: README.md
079/: Cargo.toml  E_1-4-test.opus  README.md  bracelets.py  cayley_graph.gv  cayley_graph1.gv  misc.py  normal_form.py
079/src/: main.rs
080/: README.md
081/: README.md
082/: README.md
083/: README.md
084/: Cargo.toml  README.md
084/src/: main.rs
085/: README.md
086/: README.md
087/: README.md
088/: README.md
