[package]
name = "rangifer_diary_068"
version = "0.0.0"
authors = ["deer <capreolina@protonmail.ch>"]
edition = "2018"
description = "Additional material for rangifer’s diary: pt. lxix"
homepage = "https://codeberg.org/deer/rangifer_diary"
repository = "https://codeberg.org/deer/rangifer_diary"
license = "Apache-2.0 OR MIT"
keywords = ["maplestory", "rangifer", "ron", "markdown", "table"]
publish = false

[dependencies.maple_jobs]
git = "https://codeberg.org/deer/maple_jobs"
branch = "master"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
