[package]
name = "rangifer_diary_071"
version = "0.0.0"
edition = "2021"
authors = ["deer <capreolina@protonmail.ch>"]
description = "Additional material for rangifer’s diary: pt. lxxii"
homepage = "https://codeberg.org/deer/rangifer_diary"
repository = "https://codeberg.org/deer/rangifer_diary"
license = "Apache-2.0 OR MIT"
keywords = ["rainbow box", "hypergraph", "plotters", "maplestory", "rangifer"]
publish = false

[dependencies]
plotters = "0.3.1"
ron = "0.7.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
