[package]
name = "rangifer_diary_084"
version = "0.0.0"
edition = "2021"
authors = ["deer <capreolina@protonmail.ch>"]
description = "Additional material for rangifer’s diary: pt. lxxxv"
homepage = "https://codeberg.org/deer/rangifer_diary"
repository = "https://codeberg.org/deer/rangifer_diary"
license = "Apache-2.0 OR MIT"
keywords = ["glitch-art", "datamoshing", "bitmap", "image-manipulation", "bmp"]
categories = ["multimedia", "multimedia::images", "graphics"]
publish = false

[dependencies]
rand = "0.8.5"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
